--- a/layouts/partials/extend-footer.html
+++ b/layouts/partials/extend-footer.html
@@ -1,5 +1,16 @@
+<style>
+    body {
+        /* 这里用了 relURL 魔法，无论本地还是线上都能找到图 */
+        background-image: url('{{ "lavalamp.svg" | relURL }}');
+        background-size: cover;
+        background-attachment: fixed;
+        background-position: 50%;
+        background-repeat: no-repeat;
+    }
+</style>
+
 <audio id="music-player" loop>
-    <source src="/bgm.mp3" type="audio/mpeg">
+    <source src="{{ "bgm.mp3" | relURL }}" type="audio/mpeg">
 </audio>
 
 <div id="music-btn" class="music-btn" onclick="toggleMusic()">
